<resources>
    <string name="app_name">Picsum Pictures</string>

    <string name="start_hint_picsum">Picture preview size</string>
    <string name="show_pictures">Load pictures</string>
    <string name="more">&gt;</string>
    <string name="less">&lt;</string>


    <string name="start_hint">Enter username</string>
    <string name="start_username_hint">Type here…</string>
    <string name="start_search">Search</string>
    <string name="start_error_no_results">There\'s no results for your query.</string>

    <string name="user_list_header">For query \"%1$s\" found %2$d results</string>
</resources>
